// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CharacterList > Mounted component with character 1`] = `
"<div class="character-list">
  <ul class="character-list__grid">
    <li class="character-list__cell">
      <character-card-stub data="[object Object],[object Object],[object Object]"></character-card-stub>
    </li>
  </ul>
  <!--v-if-->
</div>"
`;

exports[`CharacterList > Mounted component with slot 1`] = `
"<div class="character-list">
  <!--v-if-->
  <div class="character-list__append">Hello, i'am slot</div>
</div>"
`;

exports[`CharacterList > Mounted pure component 1`] = `
"<div class="character-list">
  <!--v-if-->
  <!--v-if-->
</div>"
`;
